nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-landing
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-landing
